# utah-gsp-rtp

./: .gitignore  Estimator.py  RunAndTumble.py  evans_majumdar.mat  exittime.m  expressions.mat
code/: CMakeLists.txt  Makefile.bak  RTP-slurm-runner.ipynb  Untitled1.ipynb  build.sh  configure.sh  gmon.out  make_master_h5.ipynb  make_master_h5.py  profile_info  rtp.sbatch  slurm_sweeper.py
code/.cache/clangd/index/: main.cpp.A34CE981E679AA17.idx
code/.ipynb_checkpoints/: RTP-slurm-runner-checkpoint.ipynb  make_master_h5-checkpoint.ipynb  rtp-checkpoint.sbatch  slurm-sweeper-checkpoint.py
code/src/: main.cpp  random.cpp
tex/: expression_for_brownian_texit_and_mct.fls  expression_for_brownian_texit_and_mct.tex  main.fls  main.tex
tex/aux/: expression_for_brownian_texit_and_mct.aux  expression_for_brownian_texit_and_mct.fdb_latexmk  main.aux  main.fdb_latexmk
